tests/InvalidSyntax/redeclare.js
import b from './b';
import a from './a';

// Here's an invalid example of redeclaring a variable
let   name    =     "error"   ;
let name = "error";
